Reviewed Data modules

--- a/Documentation/Data Modules/File to Text.mdx
+++ b/Documentation/Data Modules/File to Text.mdx
@@ -9,7 +9,9 @@ You can use this module to transform any document of `PDF`, `DOCX`, `TXT` into t
 
 The `Document to Text` module has **one input** and **one output**:
 
-- **Input**: One input of type `Document`
-- **Output**: `Text`, the output is the text inside the document you provided
+- **Input**: 
+  - One input of type `Document`
+- **Output**: 
+  - `X` number of Text outputs
 
-<img height="200" src="/images/RF.png" />
+<img height="200" src="/images/FileToText.png" />
