--- a/Documentation/Data Modules/Generate File.mdx
+++ b/Documentation/Data Modules/Generate File.mdx
@@ -3,13 +3,19 @@ title: "Text to Document"
 description: "Create a text document containing the specified content."
 ---
 
-The `Text to Document` module is a data module that can convert text and images into a file.
+The `Text to Document` module is a data module that can convert text and images into a file. Currently there is no way to style this document.
 
-You can use this module to transform your AI-generated text into a file of `PDF`, `DOCX`, `TXT`, `CSV` and `HTML` types
+The configurations of the module are the following:
+
+- **File name**: Pick the name of the file you want to export.
+- **File type**: Export on `txt` or `pdf`
+- **File parts**: Pick the structure of the file you want to form
 
 The `Text to Document` module has **variable inputs** and **one output**:
 
-- **Input**: Inputs can be of type `text` and `image`; you can add them in any specific to structure the document as you see fit
-- **Output**: `Document`, the output is of a file type in the specified format
+- **Input**: 
+  - Inputs can be of type `text` and `image`; you can add them in any specific to structure the document as you see fit
+- **Output**: 
+  - `Document`, the output is of a file type in the specified format
 
-<img height="200" src="/images/GD.png" />
+<img height="200" src="/images/TextToFile.png" />
