--- a/Documentation/Data Modules/Use Search Engine.mdx
+++ b/Documentation/Data Modules/Use Search Engine.mdx
@@ -25,8 +25,9 @@ This module has multiple configurations that can enhance its capabilities.
 
 The `Use Search Engine` module has **one input** and **one output**:
 
-- **Input**: `Query`, the request in natural language. For example for Flights, `Lisbon to London on the 13th of August`
+- **Input**: 
+  - `Query`, the request in natural language. For example for Flights, `Lisbon to London on the 13th of August`
 - **Output**:
-  - `Results`, the results of the searc query in either markdown or JSON format, as previously selected
+  - `Results`, the results of the search query in either markdown or JSON format, as previously selected. By default, each result will output individually (list), but you can merge them all together disabling the setting "Output as list".
 
-<img height="200" src="/images/USE.png" />
+<img height="200" src="/images/UseSearchEngine.png" />
