--- a/Documentation/Data Modules/Run Code.mdx
+++ b/Documentation/Data Modules/Run Code.mdx
@@ -8,16 +8,16 @@ The `Run Code` is a data node that can read a run a piece of code with as many i
 In the configuration of the node you have:
 
 - **Language**: 
-  - Currently only supports Python
+  - Currently only supports Python. Reach out if you want to use any other languages.
 - **Packages**: 
   - What packages you want to be available
 - **Code**: 
-  - `Text`, the output is the text inside the document you provided
+  - The provided input and output is already filled in. Edit the code in between.
 
-The `Document to Text` module has **one input** and **one output**:
+The `Run Code` module has **one input** and **one output**:
 
 - **Input**: 
-  - One input of type `Document`
+  - One input of type `Text`
 - **Output**: 
   - `Text`, the output is the text inside the document you provided
 
