Update Gmail trigger

--- a/Documentation/Triggers/Gmail.mdx
+++ b/Documentation/Triggers/Gmail.mdx
@@ -7,10 +7,11 @@ A `Gmail trigger` interface allows users to run workflows seamlessly when an ema
 
 The `Gmail trigger` function has the following configs and inputs:
 
+- **Source Email**: You might have multiple accounts connected with Noxus. If that's not the case, leave this field empty.
 - **Label**: Specify the label and folder from which you want emails to be read from
 - **Keyword**: Define a Keyword that, once mentioned in an email, will trigger the workflow
 - **Inputs**: Define the input component of the email that should be passed onto the workflow
 
-Take, for example, this trigger set to run every Thursday at 2 pm.
+Take, for example, this trigger set to run everytime an email from INBOX has the keyword Billing.
 
-<img height="200" src="/images/GmailT.png" />
+<img height="200" src="/images/GmailTrigger.png" />
