--- a/Documentation/Integration Modules/GmailW.mdx
+++ b/Documentation/Integration Modules/GmailW.mdx
@@ -3,15 +3,26 @@ title: "Gmail - Send Email"
 description: "This module allows you to create and send an email directly from your Gmail account"
 ---
 
-> **This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
+> **This Module requires that you connect your account. You can do this in the configuration of the node, or in the Integrations page**
 
-The `Gmail - Send Email` module allows you to finalize a workflow with an email that can be sent from your Gmail address.
+The `Gmail - Send Email` module allows you to send an email from your Gmail address.
 
 **This is particularly useful when you want to automate email outreach or receive / send reports (e.g., News reports / Competitor reports / Operational reports).**
 
-The `Gmail - Send Email` module has **three inputs**:
+The configurations of the node are:
+- **Smart Formatting**
+  - If enabled, the email is styled according to the content. Recommended for tables, reports and newsletters.
+- **Draft**
+  - If this is disabled, emails will be sent automatically. If not, they will be saved on your draft folder. We reccomend enabling this if you want to review your emails.
 
-- **Input**: Multiple type `text` inputs can be received. The `recipient` represents the email or emails (if it is a list) to which you want to send the email. The `title` means the email's subject, and the `body` represents the body of the email.
-- **Config**: If the `draft` button is enabled, emails are kept as drafts in your inbox
+The `Gmail - Send Email` module has **four inputs**:
 
-<img height="200" src="/images/GmailW.png" />
+- **Input**: 
+  - `Recipient` - The email you want to send an email to
+  - `Title` - The title of the email. (Consider using a generate text to produce this)
+  - `Body` - The actual body of the email
+  - `Attachments` - Attachments to go with your email. They have to be in File form. (Consider using the text to file node) 
+
+Important to note that the emails can take up to 2-3 minutes to be processed and sent.
+
+<img height="200" src="/images/GmailWritter.png" />
