--- a/Documentation/Triggers/Gmail.mdx
+++ b/Documentation/Triggers/Gmail.mdx
@@ -7,7 +7,7 @@ A `Gmail trigger` interface allows users to run workflows seamlessly when an ema
 
 The `Gmail trigger` function has the following configs and inputs:
 
-- **Source Email**: You might have multiple accounts connected with Noxus. If that's not the case, leave this field empty.
+- **Source Email**: Specific emails for this trigger to work with. If you want it to trigger with all emails, keep it empty.
 - **Label**: Specify the label and folder from which you want emails to be read from
 - **Keyword**: Define a Keyword that, once mentioned in an email, will trigger the workflow
 - **Inputs**: Define the input component of the email that should be passed onto the workflow
