--- a/Documentation/Integration Modules/Google sheets reader.mdx
+++ b/Documentation/Integration Modules/Google sheets reader.mdx
@@ -3,9 +3,9 @@ title: "Google Sheets - Read from Columns"
 description: "Peeks into your Google Spreadsheets and grabs the data you need for analysis or reports."
 ---
 
-> **This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
+> This node requires that you connect your account to the `Integrations`, or connect it directly in the configurations of the node
 
-<img height="200" src="GSR.png" />
+<img height="200" src="/images/SheetsReaderConnection.png" />
 
 The `Google Sheets - Read from Columns` module allows you to read data from Google Sheets.
 
