Fix linkedin Documentation

--- a/Documentation/Integration Modules/CompanySearch.mdx
+++ b/Documentation/Integration Modules/CompanySearch.mdx
@@ -3,13 +3,12 @@ title: "Linkedin - Company Search"
 description: "Enter a company domain to extract a company summary or raw data"
 ---
 
-> **This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
-
 The `Linkedin - Company Search` module uses a company website domain to extract a concise summary or detailed raw data of the company's Linkedin profile.
 
 The `Linkedin - Company Search` module has **one input** and **one output**:
 
-- **Input** - Company Website Domain
+- **Input** 
+  - Company Website Domain in LinkedIn. Eg. "https://www.linkedin.com/company/pandadoc/"
 - **Output**:
   - Complete profile with all the information extracted from Linkedin
 - **Config**:
