--- a/Documentation/Integration Modules/ReadProfile.mdx
+++ b/Documentation/Integration Modules/ReadProfile.mdx
@@ -3,14 +3,12 @@ title: "Linkedin - Read Profile"
 description: "Enter a Linkedin URL to extract a profile summary or raw data"
 ---
 
-> **This Module requires that you connect your account to the `Linked Accounts` page. Go to Settings to get this done.**
-
 The `Linkedin - Read Profile` module uses a LinkedIn URL to extract a concise summary or detailed raw data of an individual or company profile.
 
 The `Linkedin - Read Profile` module has **one input** and **one output**:
 
 - **Input**:
-  - Linkedin URL for the profile to be read
+  - Linkedin URL for the profile to be read. Only the URL can enter here. Anything else, will produce an error.
 - **Output**:
   - Complete profile with all the information extracted from Linkedin
 - **Config**:
