Fix youtube links

--- a/Documentation/YFT.mdx
+++ b/Documentation/YFT.mdx
@@ -10,7 +10,7 @@ This page will guide you through some basic video tutorials to help you start wi
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/-CUQaVQZS6s?si=lsL329_rXvJueBHn"
+  src="https://www.youtube.com/watch?v=TxsSfJccC2w&t=100s&ab_channel=Noxus"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -22,19 +22,19 @@ This page will guide you through some basic video tutorials to help you start wi
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/cUmU-o0qgSk?si=buIB1aKIqc_vV1vv"
+  src="https://www.youtube.com/watch?v=Dv2umR1RRTk&ab_channel=Noxus"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
   allowfullscreen
 ></iframe>
 
-## Tutorial 3: Meeting Transcript Summarizer
+## Tutorial 3: Building a legal expert agent 
 
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/embed/-HcbcC6lD0Q?si=auDLrFDfU17OW0_f"
+  src="https://www.youtube.com/watch?v=nFOoabG9-U0&ab_channel=Noxus"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
