fix: update youtube links

--- a/Documentation/YFT.mdx
+++ b/Documentation/YFT.mdx
@@ -10,7 +10,7 @@ This page will guide you through some basic video tutorials to help you start wi
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=TxsSfJccC2w&t=100s&ab_channel=Noxus"
+  src="https://www.youtube.com/embed/TxsSfJccC2w"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -22,7 +22,7 @@ This page will guide you through some basic video tutorials to help you start wi
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=Dv2umR1RRTk&ab_channel=Noxus"
+  src="https://www.youtube.com/embed/Dv2umR1RRTk"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -34,7 +34,7 @@ This page will guide you through some basic video tutorials to help you start wi
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=nFOoabG9-U0&ab_channel=Noxus"
+  src="https://www.youtube.com/embed/nFOoabG9-U0?si=Xa2P3kk9DkvY_Mcn"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
